2016-01-20  Nick Clifton  <nickc@redhat.com>

	PR 19499
	* doc/as.texinfo (Errors): Correct documentation describing the
	interaction of .file and .line with warning and error messages.

	PR 19458
	* testsuite/gas/arm/armv8_2-a.d: Skip for COFF based targets.
	* testsuite/gas/arm/archv8m-main.d: Likewise.
	* testsuite/gas/arm/archv8m-base.d: Likewise.

2016-01-20  Matthew Wahab  <matthew.wahab@arm.com>

	* testsuite/gas/aarch64/armv8_2-a-illegal.d: New.
	* testsuite/gas/aarch64/armv8_2-a-illegal.l: New.
	* testsuite/gas/aarch64/armv8_2-a-illegal.s: New.

2016-01-20  Mickael Guene  <mickael.guene@st.com>
	    Terry Guo  <terry.guo@arm.com>

	* config/obj-elf.c (obj_elf_change_section) : Allow arm section with
	SHF_ARM_NOREAD section flag.
	* config/tc-arm.h (md_elf_section_letter) : Implement this hook to
	handle letter 'y'.
	(arm_elf_section_letter) : Declare it.
	* config/tc-arm.c (arm_elf_section_letter): Handle letter 'y' to set
	SHF_ARM_NOREAD section flag.
	* doc/c-arm.texi (ARM section attribute): Document the 'y' attribute.

	* testsuite/gas/arm/section-execute-only.s: New test case.
	* testsuite/gas/arm/section-execute-only.d: Expected output.

2016-01-18  Maciej W. Rozycki  <macro@imgtec.com>

	* config/tc-mips.c (micromips_insn_length): Remove the mention
	of 48-bit microMIPS instructions.

2016-01-18  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2016-01-17  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2016-01-17  Alan Modra  <amodra@gmail.com>

	* testsuite/gas/cfi/cfi.exp: Exclude m68hc11/12 from m68k test.

2016-01-14  Nick Clifton  <nickc@redhat.com>

	* testsuite/gas/rl78/sp-relative-movw.s: New test.
	* testsuite/gas/rl78/sp-relative-movw.d: Expected disassembly.
	* testsuite/gas/rl78/rl78.exp: Run the new test.

2016-01-14  Matthew Wahab  <matthew.wahab@arm.com>

	* testsuite/gas/aarch64/illegal-sysreg-2.l: New.
	* testsuite/gas/aarch64/illegal-sysreg-2.d: New.

2016-01-13  Maciej W. Rozycki  <macro@imgtec.com>
