@@ -1,2 +1,3 @@
 #name: Invalid relocations
 #error-output: reloc-bad.l
+#not-target: *-*-vxworks
